--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Presenter.MainScreen" />
-        <activity android:name=".Presenter.HackerActivity">
+        <activity android:name=".Presenter.MainScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Presenter.HackerActivity" />
         <activity android:name=".Presenter.TargetSelect" />
-        <activity android:name=".Presenter.TargetActivity"></activity>
+        <activity android:name=".Presenter.TargetActivity" />
+        <activity android:name=".Presenter.PowerUpScreen"></activity>
     </application>
 
 </manifest>
