--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:24.0.+'
     compile 'com.android.support:design:24.0.+'
+    compile 'com.backendless:backendless:3.0.25'
 }
