--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.0.+'
-    compile 'com.android.support:design:24.0.+'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:design:24.0.0'
     compile 'com.backendless:backendless:3.0.25'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
