--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ellis.haxddesign">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,18 +10,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Presenter.MainScreen">
+        <activity android:name=".Presenter.MainScreen"></activity>
+        <activity android:name=".Presenter.HackerActivity" />
+        <activity android:name=".Presenter.TargetSelect" />
+        <activity android:name=".Presenter.TargetActivity" />
+        <activity android:name=".Presenter.PowerUpScreen" />
+        <activity android:name=".Presenter.RegisterActivity" />
+        <activity android:name=".Presenter.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Presenter.HackerActivity" />
-        <activity android:name=".Presenter.TargetSelect" />
-        <activity android:name=".Presenter.TargetActivity" />
-        <activity android:name=".Presenter.PowerUpScreen" />
-        <activity android:name=".Presenter.RegisterActivity"></activity>
     </application>
 
 </manifest>
